--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     background-color: #8BC6EC;
     background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
     gap: 30px;
-
+    pading-bottom:128px;
 }
 
 video {
@@ -101,4 +101,5 @@ i{
     bottom: 10px;
     text-align: center;
     width:100%;
+    height:128px
 }
