--- a/style.css
+++ b/style.css
@@ -10,23 +10,33 @@
 
 body {
     overflow-x: hidden;
+    background-color: #8BC6EC;
+    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+}
+
+.main {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    flex-wrap: wrap;
+
 }
 
 .container {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
     overflow-x: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
-    gap: 30px;
-    background-color: #8BC6EC;
-    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
-}
+    gap: 20px;
 
+}
+.info {
+    text-align: center;
+}
 video {
     position: fixed;
     top: 0;
@@ -104,8 +114,3 @@ i {
     }
 }
 
-.info {
-    text-align: center;
-    width: 100%;
-    height: 128px
-}
